--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF--8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicación de Dictado</title>
+    <title>Grabadora y Transcriptor Pro</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Grabadora y Transcriptor</h1>
+    <header>
+        <h1>Grabadora y Transcriptor Pro</h1>
+        <div class="theme-switcher">
+            <label for="themeToggle">Modo Claro</label>
+            <input type="checkbox" id="themeToggle">
+        </div>
+    </header>
 
-    <div class="controls">
-        <button id="recordButton">Grabar</button>
-        <button id="pauseButton" disabled>Pausar</button>
-        <button id="stopButton" disabled>Detener</button>
-    </div>
+    <main>
+        <div class="visualizer-container">
+            <canvas id="audioVisualizer"></canvas>
+        </div>
 
-    <div id="status">Presiona "Grabar" para empezar</div>
+        <div class="controls">
+            <button id="recordButton" title="Grabar">
+                <!-- Icono de Grabar (círculo) -->
+                <svg viewBox="0 0 24 24" width="24" height="24"><path fill="currentColor" d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"></path></svg>
+            </button>
+            <button id="pauseButton" title="Pausar" disabled>
+                <!-- Icono de Pausa -->
+                <svg viewBox="0 0 24 24" width="24" height="24"><path fill="currentColor" d="M14,19H18V5H14M6,19H10V5H6V19Z"></path></svg>
+            </button>
+            <button id="stopButton" title="Detener" disabled>
+                <!-- Icono de Detener -->
+                <svg viewBox="0 0 24 24" width="24" height="24"><path fill="currentColor" d="M18,18H6V6H18V18Z"></path></svg>
+            </button>
+        </div>
 
-    <audio id="audioPlayer" controls></audio>
+        <div id="status">Presiona el botón de grabar para empezar</div>
+        <audio id="audioPlayer" controls></audio>
 
-    <h2>Grabaciones</h2>
-    <ul id="recordingsList">
-        <!-- Aquí se agregarán las grabaciones dinámicamente -->
-    </ul>
+        <div class="upload-section">
+            <h3>¿Ya tienes un audio?</h3>
+            <div id="dropZone">Arrastra y suelta un archivo de audio aquí</div>
+            <p>o</p>
+            <input type="file" id="fileInput" accept="audio/*">
+        </div>
+
+        <div class="recordings-header">
+            <h2>Grabaciones</h2>
+            <div class="batch-actions">
+                <button id="clearTranscriptsButton">Limpiar Transcripciones</button>
+                <button id="clearAllButton">Limpiar Todo</button>
+            </div>
+        </div>
+        <ul id="recordingsList"></ul>
+    </main>
 
     <script src="script.js"></script>
 </body>
