Nuevas funcionalidades - Versión 3

--- a/public/index.html
+++ b/public/index.html
@@ -16,44 +16,57 @@
     </header>
 
     <main>
-        <!-- SECCIÓN 1: GRABAR (AHORA IDENTIFICADA) -->
+        <!-- Las secciones de Grabar y Cargar se mantienen igual -->
         <div class="action-section">
             <h3>Grabar un Audio Nuevo</h3>
-            <div class="main-controls">
-                <button id="recordButton" title="Grabar">
-                    <svg viewBox="0 0 24 24" width="32" height="32"><path fill="currentColor" d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"></path></svg>
-                </button>
-                <button id="pauseButton" title="Pausar" disabled>
-                    <svg viewBox="0 0 24 24" width="32" height="32"><path fill="currentColor" d="M14,19H18V5H14M6,19H10V5H6V19Z"></path></svg>
-                </button>
-                <button id="stopButton" title="Detener" disabled>
-                    <svg viewBox="0 0 24 24" width="32" height="32"><path fill="currentColor" d="M18,18H6V6H18V18Z"></path></svg>
-                </button>
-            </div>
-            <div id="status">Presiona el botón de grabar para empezar</div>
+            <!-- ... Contenido de los controles de grabación ... -->
         </div>
-
-        <!-- SECCIÓN 2: CARGAR (AHORA IDENTIFICADA) -->
         <div class="action-section">
             <h3>Cargar un Archivo Existente</h3>
-            <div class="upload-section">
-                <div id="dropZone">Arrastra y suelta un archivo aquí</div>
-                <p>o</p>
-                <label for="fileInput" class="file-label">Seleccionar Archivo</label>
-                <input type="file" id="fileInput" accept="audio/*" hidden>
-            </div>
+            <!-- ... Contenido de la sección de carga ... -->
         </div>
         
         <audio id="audioPlayer" hidden></audio>
 
         <div class="recordings-header">
             <h2>Tus Grabaciones</h2>
-            <div class="batch-actions">
-                <button id="clearTranscriptsButton">Limpiar Transcripciones</button>
-                <button id="clearAllButton">Limpiar Todo</button>
+            <div class="sort-controls">
+                <input type="checkbox" id="sortToggle">
+                <label for="sortToggle">Ordenar del más nuevo al más antiguo</label>
             </div>
         </div>
         <ul id="recordingsList"></ul>
+
+        <!-- NUEVA SECCIÓN DE CONFIGURACIÓN AVANZADA -->
+        <details class="advanced-config">
+            <summary>Configuración Avanzada del Reproductor</summary>
+            <div class="config-content">
+                <div class="config-item">
+                    <label for="speedControl">Velocidad:</label>
+                    <span id="speedValue">1.0x</span>
+                    <input type="range" id="speedControl" min="0.5" max="2" step="0.1" value="1">
+                </div>
+                <div class="config-item">
+                    <label for="repeatControl">Repetición:</label>
+                    <select id="repeatControl">
+                        <option value="none">Ninguna</option>
+                        <option value="all">Repetir Lista</option>
+                        <option value="one">Repetir Uno</option>
+                    </select>
+                </div>
+                <div class="config-item">
+                    <label for="rewindControl">Segundos de Retroceso:</label>
+                    <input type="number" id="rewindControl" value="5" min="1">
+                </div>
+
+                <h4>Configurar Atajos de Teclado</h4>
+                <p class="shortcut-instructions">Haz clic en "Establecer", presiona la tecla deseada y haz clic de nuevo para cancelar.</p>
+                <div id="shortcutList">
+                    <!-- Los atajos se generarán dinámicamente con JS -->
+                </div>
+                <button id="resetShortcutsButton">Resetear Configuración</button>
+            </div>
+        </details>
     </main>
 
     <script src="script.js"></script>
