--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,32 @@
     </header>
 
     <main>
-        <!-- Las secciones de Grabar y Cargar se mantienen igual -->
+        <!-- SECCIÓN 1: GRABAR (ESTA ES LA PARTE QUE FALTABA) -->
         <div class="action-section">
             <h3>Grabar un Audio Nuevo</h3>
-            <!-- ... Contenido de los controles de grabación ... -->
+            <div class="main-controls">
+                <button id="recordButton" title="Grabar">
+                    <svg viewBox="0 0 24 24" width="32" height="32"><path fill="currentColor" d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"></path></svg>
+                </button>
+                <button id="pauseButton" title="Pausar" disabled>
+                    <svg viewBox="0 0 24 24" width="32" height="32"><path fill="currentColor" d="M14,19H18V5H14M6,19H10V5H6V19Z"></path></svg>
+                </button>
+                <button id="stopButton" title="Detener" disabled>
+                    <svg viewBox="0 0 24 24" width="32" height="32"><path fill="currentColor" d="M18,18H6V6H18V18Z"></path></svg>
+                </button>
+            </div>
+            <div id="status">Presiona el botón de grabar para empezar</div>
         </div>
+
+        <!-- SECCIÓN 2: CARGAR (ESTA ES LA OTRA PARTE QUE FALTABA) -->
         <div class="action-section">
             <h3>Cargar un Archivo Existente</h3>
-            <!-- ... Contenido de la sección de carga ... -->
+            <div class="upload-section">
+                <div id="dropZone">Arrastra y suelta un archivo aquí</div>
+                <p>o</p>
+                <label for="fileInput" class="file-label">Seleccionar Archivo</label>
+                <input type="file" id="fileInput" accept="audio/*" hidden>
+            </div>
         </div>
         
         <audio id="audioPlayer" hidden></audio>
@@ -37,7 +55,7 @@
         </div>
         <ul id="recordingsList"></ul>
 
-        <!-- NUEVA SECCIÓN DE CONFIGURACIÓN AVANZADA -->
+        <!-- SECCIÓN DE CONFIGURACIÓN AVANZADA -->
         <details class="advanced-config">
             <summary>Configuración Avanzada del Reproductor</summary>
             <div class="config-content">
@@ -62,7 +80,7 @@
                 <h4>Configurar Atajos de Teclado</h4>
                 <p class="shortcut-instructions">Haz clic en "Establecer", presiona la tecla deseada y haz clic de nuevo para cancelar.</p>
                 <div id="shortcutList">
-                    <!-- Los atajos se generarán dinámicamente con JS -->
+                    <!-- Los atajos se generan dinámicamente con JS -->
                 </div>
                 <button id="resetShortcutsButton">Resetear Configuración</button>
             </div>
