--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,6 @@
         
         <audio id="audioPlayer" hidden></audio>
 
-        <!-- ENCABEZADO DE GRABACIONES CON BOTONES RESTAURADOS -->
         <div class="recordings-header">
             <h2>Tus Grabaciones</h2>
             <div class="header-controls">
@@ -62,14 +61,32 @@
         </div>
         <ul id="recordingsList"></ul>
 
-        <!-- SECCIÓN DE CONFIGURACIÓN CON ATRIBUTOS RESTAURADOS -->
+        <!-- SECCIÓN DE CONFIGURACIÓN AVANZADA (COMPLETA) -->
         <details class="advanced-config">
             <summary>Configuración Avanzada del Reproductor</summary>
             <div class="config-content">
-                <!-- ... (Controles de Velocidad, Repetición, Retroceso) ... -->
+                <div class="config-item">
+                    <label for="speedControl">Velocidad:</label>
+                    <span id="speedValue">1.0x</span>
+                    <input type="range" id="speedControl" min="0.5" max="2" step="0.1" value="1">
+                </div>
+                <div class="config-item">
+                    <label for="repeatControl">Repetición:</label>
+                    <select id="repeatControl">
+                        <option value="none">Ninguna</option>
+                        <option value="all">Repetir Lista</option>
+                        <option value="one">Repetir Uno</option>
+                    </select>
+                </div>
+                <div class="config-item">
+                    <label for="rewindControl">Segundos de Retroceso:</label>
+                    <input type="number" id="rewindControl" value="5" min="1">
+                </div>
+
                 <h4>Configurar Atajos de Teclado</h4>
+                <p class="shortcut-instructions">Haz clic en "Establecer", presiona la tecla deseada y haz clic de nuevo para cancelar.</p>
                 <div id="shortcutList">
-                    <!-- Los atajos se generarán dinámicamente aquí -->
+                    <!-- Los atajos se generan dinámicamente aquí -->
                 </div>
                 <button id="resetShortcutsButton">Resetear Configuración</button>
             </div>
