FIX: Corregir bugs de bucle de lista y velocidad de reproducción

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                     <label for="repeatControl">Repetición:</label>
                     <select id="repeatControl">
                         <option value="none">Ninguna</option>
-                        <option value="all">Repetir Lista</option>
+                        <option value="all">Bucle de lista</option>
                         <option value="one">Repetir Uno</option>
                     </select>
                 </div>
