--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
                     <label for="sortToggle">Ordenar del más nuevo al más antiguo</label>
                 </div>
                 <div class="batch-actions">
+                    <!-- BOTÓN AÑADIDO AQUÍ -->
+                    <button id="stopAllButton">Detener Todo</button>
                     <button id="clearTranscriptsButton">Limpiar Transcripciones</button>
                     <button id="clearAllButton">Limpiar Todo</button>
                 </div>
